2000-07-03  Jim Wilson  <wilson@cygnus.com>

	* elf64-alpha.c (alpha_elf_size_info): New.
	(elf_backend_size_info): Define to alpha_elf_size_info.
	* elfcode.h (elf_size_info): Change hash bucket size to 4.

2000-07-03  Ulf Carlsson  <ulfc@engr.sgi.com>

	* elf32-mips.c: Include elf32-target.h again for the traditional
	MIPS targets.

2000-07-03  Marek Michalkiewicz  <marekm@linux.org.pl>

	* elf32-avr.c (bfd_elf32_bfd_reloc_type_lookup):
	Add ATTRIBUTE_UNUSED to unused arguments to avoid warnings.
	(avr_info_to_howto_rela): Likewise.
	(elf32_avr_gc_mark_hook): Likewise.
	(elf32_avr_gc_sweep_hook): Likewise.
	(elf32_avr_relocate_section): Likewise.

2000-07-03  Mark Elbrecht  <snowball3@bigfoot.com>

	* cofflink.c (_bfd_coff_write_global_sym): Turn a weak symbol into
	an external symbol for a non-shared, non-relocatable link.
	
2000-07-03  Nick Clifton  <nickc@redhat.com>

	* cofflink.c (IS_EXTERNAL): New macro: Return true if the symbol
	is an external symbol.
	(IS_WEAK_EXTERNAL): New macro: Return true if the symbol is a weak
	external symbol.
	
2000-07-03  Kazu Hirata  <kazu@hxi.com>

	* reloc16.c: Fix formatting.

2000-07-01  Koundinya K  <kk@ddeorg.soft.net>

        * config.bfd: Change targ_defvec and targ_selvecs for mips*-*-sysv4*
        to add a new target for traditional mips i.e
        bfd_elf32_tradbigmips_vec and bfd_elf32_tradlittlemips_vec.
        * configure.in: Likewise.
        * configure: Rebuild.
        * targets.c (bfd_elf32_tradbigmips_vec): Declare and put in
	bfd_target_vector.
	(bfd_elf32_tradlittlemips_vec): Likewise.
        * elfxx-target.h: Add macro INCLUDED_TARGET_FILE which is more a test
        to see that elfNN_bed does not get redefined even if the target file
        is included twice for a chip. See elf32-mips.c.
	
2000-07-01  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am (DEP): Fix 2000-06-22.  grep after running dep.sed
	(CLEANFILES): Add DEPA.
	* Makefile.in: Regenerate.

2000-06-30  DJ Delorie  <dj@cygnus.com>
	