@@ -1,3 +1,8 @@
+2000-07-04  Alexandre Oliva  <aoliva@redhat.com>
+
+	* coff-arm.c (coff_arm_relocate_section): Do not ignore the symbol
+	value of PC-relative offsets.
+
 2000-07-03  Jim Wilson  <wilson@cygnus.com>
 
 	* elf64-alpha.c (alpha_elf_size_info): New.
